# the-watermark-directory

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .orlop.yml  .test_durations  AGENTS.md  Brewfile  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.claude/skills/document-production-and-ocr/: SKILL.md
.claude/skills/entity-and-document-deconstruction/: SKILL.md
.claude/skills/evidentiary-discipline/: SKILL.md
.claude/skills/gis-and-siting-analysis/: SKILL.md
.claude/skills/watermark-design/: SKILL.md
.github/: CODEOWNERS
.github/config/: Pulumi.prod.yaml  Pulumi.yaml  README.md  cloudflare.ts  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: agent-worker.yml  ask-eval.yml  ci.yml  data-refresh.yml  deploy-infra.yml  pages.yml  repo-config.yml  research.yml
data/: README.md  sites.yaml
data/catalog/: COMPLETENESS.md  _observed.yaml
data/concepts/: 7q10.md  README.md  assimilative-capacity.md  common-control-plumbing.md  consumptive-cooling.md  grant-refund-clause.md  hyperscale-data-center.md  public-records-mandamus.md  roadwork-development-agreement.md
data/entities/: README.md
data/extracted/: roundabouts.detail.opc.yaml
data/hypotheses/: README.md
data/people/: README.md  beth-seibert.md  brad-niemeyer.md  brion-rhodes.md  christopher-batdorff.md  cory-noonan.md  david-streeter.md  heather-davis.md  jared-grigg.md  jena-shafer.md  jill-tangeman.md  joe-guagenti.md  john-willamowski-jr.md  john-willamowski.md  keaton-brenneman.md  leah-thorsen.md  mike-lugibihl.md  rachael-gilroy.md  russ-decker.md  tim-fitzpatrick.md
data/poi/: README.md  data-center-campus.md
data/research/: README.md
data/scenarios/: README.md  baseline.scenario.yaml  buildout.scenario.yaml
data/site/: README.md  exhibits.yaml  gis-findings.geojson  leads.yaml  published-documents.README.md  published-documents.yaml
deploy/: Pulumi.prod.yaml  Pulumi.yaml  README.md  features.yaml  index.ts  package-lock.json  package.json
design/: COMPONENT-AUDIT.md  DESIGNSYNC.md  SKILL.md  designsync.json  readme.md  styles.css
design/guidelines/: brand-mark.card.html  brand-wordmark.card.html  colors-bone.card.html  colors-evidence.card.html  spacing-scale.card.html  type-display.card.html
design/tokens/: colors.css
docs/: COMPUTE.md  COURSE.md  DOSSIER.md  ECONOMICS.md  GRID.md  HYDROLOGY.md  NETWORK.md  README.md  admin-app.md  ask-api.md  auth.md  bigger-picture.md  deckgl-spike.md  defense-nexus.md  end-use-and-workloads.md  imagery-subsystem.md  marimo-integration-investigation.md  methodology.md  object-store.md  onboarding.md  poi-subsystem.md  research-app.md  rum.md  submissions-api.md  the-economic-ledger.md  the-load-and-the-grid.md  toxics-and-the-corridor.md
docs/investigative-method/: ENRICHMENT.md  README.md  SYSTEM_PROMPT.md
docs/legal/: README.md  document-publication-review.md  mandamus-analysis.md  proponent-analysis.md
frontend/: .gitignore  README.md  astro.config.mjs  astro.config.ts  biome.json  mise.toml  package-lock.json  package.json  tsconfig.json  wrangler.toml
frontend/design-system/: COMPONENT-AUDIT.md  DESIGNSYNC.md  designsync.json
frontend/functions/: README.md
frontend/public/: _redirects
frontend/sample-bundle/: README.md  manifest.json
frontend/scripts/: check-links.mjs  dev-stack.mjs  gen-icons.mjs
frontend/src/: content.config.ts  env.d.ts  middleware.ts
lambda/notify/: index.ts  package.json  tsconfig.json
notebooks/: .gitignore  README.md  marimo-integration-investigation.md  opc_scenario.py
scripts/: render_walk_crops.py
spikes/deckgl-corridor/: CorridorMap.tsx  README.md  index.html  package.json
src/bosc/: candidates.py  catalog.py  catalog_audit.py  catalog_backfill.py  catalog_check.py  catalog_producer.py  catalog_reconcile.py  catalog_render.py  catalog_sites.py  cli.py  config.py  gleif.py  hypotheses.py  ledger.py  models.py  network.py  onboard.py  provenance.py  rsei.py  sites.py  usaspending.py
src/watermark/: __init__.py  candidates.py  catalog.py  catalog_audit.py  catalog_backfill.py  catalog_check.py  catalog_reconcile.py  catalog_render.py  catalog_sites.py  config.py  gleif.py  hypotheses.py  ledger.py  logging.py  models.py  network.py  onboard.py  people.py  profiles.py  provenance.py  rsei.py  usaspending.py
tests/: CLAUDE.md  conftest.py  test_agent.py  test_agent_tools.py  test_candidates.py  test_catalog.py  test_catalog_audit.py  test_catalog_backfill.py  test_catalog_check.py  test_catalog_output.py  test_catalog_producer.py  test_catalog_reconcile.py  test_catalog_render.py  test_catalog_sites.py  test_civic_audit.py  test_civic_discovery.py  test_civic_downloader.py  test_civic_entity_foldin.py  test_civic_fetchers.py  test_civic_generic_fetcher.py  test_civic_indexer.py  test_civic_subdivisions.py  test_civic_summarize.py  test_concepts.py  test_config.py  test_corpus.py  test_cross_site_readside.py  test_detail.py  test_documents.py  test_econ_baseline.py  test_eia_demand_pressure.py  test_engineering.py  test_entities.py  test_extract.py  test_extracted_yaml_valid.py  test_gh_leads.py  test_gis_analysis.py  test_gis_corridor.py  test_gis_imagery.py  test_gis_map.py  (+90 more)
tests/facility/: test_cli.py  test_compute.py  test_power.py
tests/fixtures/: README.md  periplus-bosc-parcels.geojson
web/: .dev.vars.example  .gitignore  astro.config.ts  biome.json  mise.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
web/functions/: README.md  _middleware.ts  tsconfig.json
web/plugins/: watermark-bundle.ts
web/public/: _headers
web/scripts/: dev-mocks.mjs  dev-stack.mjs  seed-r2.mjs
web/src/: content.config.ts  env.d.ts
(+2227 files in other folders)
