[project]
name = "watermark"
version = "0.1.0"
description = "Project BOSC — an agentic research platform for ingesting, extracting, and analyzing public-records source documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Shawnee Smart Systems" }]
keywords = ["research", "agentic", "document-extraction", "claude", "watermark"]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pypdfium2>=5.8.0",
    "pypdf>=6.12.2",
    "pillow>=12.2.0",
    "numpy>=2.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "planetary-computer>=1.0",
    "httpx>=0.27",
    "pyswmm>=2.1.0",
    "brotli>=1.2.0",
    "pytesseract>=0.3.13",
    "openpyxl>=3.1.5",
    "types-openpyxl>=3.1.5.20260518",
    "lancedb>=0.17",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-xdist>=3.6",  # intra-runner parallelism (-n auto)
    "pytest-split>=0.9",  # cross-runner sharding (--splits/--group), CI matrix
    "pytest-asyncio>=0.23",
    "jsonschema>=4.0",  # validates emitted bundle feeds against their JSON Schemas
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
]

[project.scripts]
watermark = "watermark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watermark"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
cache-dir = ".cache/ruff"
# Ephemeral Claude agent worktrees are full repo copies under .claude/; never lint them.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
cache_dir = ".cache/mypy"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["watermark"]

[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*", "pypdfium2.*", "shapely.*", "pyproj.*", "pyswmm.*", "pytesseract.*", "rasterio.*", "planetary_computer.*", "lancedb.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q -m 'not network'"
cache_dir = ".cache/pytest"
markers = [
    "network: hits a live external service; deselected by default (run with -m network).",
]

[tool.watermark]
# Application defaults can also be set here and read by watermark.config; env vars win.
